// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Legacy Portable Stories API > Renders CSF2Secondary story 1`] = `
<body>
  <div>
    <button
      class="storybook-button storybook-button--medium storybook-button--secondary"
      type="button"
    >
      Children coming from story args!
    </button>
  </div>
</body>
`;

exports[`Legacy Portable Stories API > Renders CSF2StoryWithParamsAndDecorator story 1`] = `
<body>
  <div>
    <button
      class="storybook-button storybook-button--medium storybook-button--secondary"
      type="button"
    >
      foo
    </button>
  </div>
</body>
`;

exports[`Legacy Portable Stories API > Renders CSF3Button story 1`] = `
<body>
  <div>
    <button
      class="storybook-button storybook-button--medium storybook-button--secondary"
      type="button"
    >
      foo
    </button>
  </div>
</body>
`;

exports[`Legacy Portable Stories API > Renders CSF3ButtonWithRender story 1`] = `
<body>
  <div>
    <div>
      <p
        data-testid="custom-render"
      >
        I am a custom render function
      </p>
      <button
        class="storybook-button storybook-button--medium storybook-button--secondary"
        type="button"
      >
        foo
      </button>
    </div>
  </div>
</body>
`;

exports[`Legacy Portable Stories API > Renders CSF3InputFieldFilled story 1`] = `
<body>
  <div>
    <input
      data-testid="input"
    />
  </div>
</body>
`;

exports[`Legacy Portable Stories API > Renders CSF3Primary story 1`] = `
<body>
  <div>
    <button
      class="storybook-button storybook-button--large storybook-button--primary"
      type="button"
    >
      foo
    </button>
  </div>
</body>
`;

exports[`Legacy Portable Stories API > Renders HooksStory story 1`] = `
<body>
  <div>
    <input
      data-testid="input"
    />
    <br />
    <button>
      I am 
      clicked
    </button>
  </div>
</body>
`;

exports[`Legacy Portable Stories API > Renders LoaderStory story 1`] = `
<body>
  <div>
    <div>
      <div
        data-testid="loaded-data"
      >
        loaded data
      </div>
      <div
        data-testid="spy-data"
      >
        mockFn return value
      </div>
    </div>
  </div>
</body>
`;

exports[`Legacy Portable Stories API > Renders Modal story 1`] = `
<body>
  <div>
    <button
      id="openModalButton"
    >
      Open Modal
    </button>
  </div>
  <div
    id="modal-root"
  >
    <div
      role="dialog"
      style="position: fixed; top: 20%; left: 50%; transform: translate(-50%, -20%); background-color: white; padding: 20px; z-index: 1000; border: 2px solid black; border-radius: 5px;"
    >
      <div
        style="margin-bottom: 10px;"
      >
        <p>
          This is a modal!
        </p>
      </div>
      <button>
        Close
      </button>
    </div>
  </div>
</body>
`;

exports[`Legacy Portable Stories API > Renders MountInPlayFunction story 1`] = `
<body>
  <div>
    <div
      data-testid="loaded-data"
    >
      loaded data
    </div>
    <div
      data-testid="spy-data"
    >
      mockFn return value
    </div>
  </div>
</body>
`;

exports[`Legacy Portable Stories API > Renders MountInPlayFunctionThrow story 1`] = `
<body>
  <div>
    <div
      data-testid="loaded-data"
    >
      loaded data
    </div>
    <div
      data-testid="spy-data"
    >
      mockFn return value
    </div>
  </div>
</body>
`;

exports[`Legacy Portable Stories API > Renders WithActionArg story 1`] = `
<body>
  <div>
    <button />
  </div>
</body>
`;

exports[`Legacy Portable Stories API > Renders WithActionArgType story 1`] = `
<body>
  <div>
    <div>
      nothing
    </div>
  </div>
</body>
`;
